# hyperadaptivAI

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.harness  Makefile  claude-code-kickoff-prompt.md  pyproject.toml
.claude/: settings.json
config/: .gitkeep
config/bundle-v0/agents/: lead-qualifier-v0.json
config/bundle-v0/flows/: lead-intake-first-follow-up.json
config/bundle-v0/vocab/: channels.json  stages.json  task_types.json
deploy/: .env.example  README.md  compose.dev.yaml  compose.yaml
deploy/config/: harness.env.template
deploy/postgres/: init.sql
deploy/secrets/: secrets.env.template
deploy/temporal/dynamicconfig/: development.yaml
docs/: 05-assets-and-offering.md  08-software-licensing-reference.md  11-stack-architecture.md  12-initial-build-prompt.md  13-build-roadmap.md  AGENT-LOOP.md  ALPHA-DEPLOYMENT.md  BLOCKS.md  CODEBASE-MAP.md  CONFIG-BUNDLE-SPEC.md  DEPLOYMENT-RUNBOOK.md  DISSECTION.md  ENVIRONMENT.md  GATE.md  INTAKE-CONTRACT.md  INTERVIEW-PROTOCOL.md  LIQUID-RESOLUTIONS.md  MEMORY.md  PRINCIPLES.md  VALIDATION.md  VERSIONING.md  harness-comparison.md  operator-error.md  operatorletter1.md
fixtures/: commission_fixture_01.json
harness/: worker.py
harness/commissioning/activities/: construct.py  dissect.py  interview.py  promote.py  validate.py
harness/commissioning/workflows/: commission.py
harness/operations/: operator_cli.py
harness/operations/activities/: __init__.py  act.py  budget.py  decide.py  record.py  situate.py
harness/operations/molecules/: gate.py
harness/operations/workflows/: agent_loop.py  lead_intake.py
harness/shared/capability/: registry.py
harness/shared/contracts/: block.py  commission.py  infer.py  intake.py  memory.py  secrets.py
harness/shared/crm/: primitives.py  verbs.py
harness/shared/inference/: __init__.py  embed_provider.py  litellm_provider.py
harness/shared/intake/: webform.py
harness/shared/memory/: __init__.py  (+1 more)
src/harness/: worker.py
tests/: conftest.py  test_hello_workflow.py  test_infer_stub.py  test_lead_intake.py  test_phase_b_blocks.py  test_phase_c_agent_loop.py  test_phase_d_commissioning.py  test_phase_e_gate.py  test_skeleton.py
(+13 files in other folders)
