[project]
name = "harness"
version = "0.1.0"
requires-python = ">=3.10"  # 3.12 target per CLAUDE.md; CI host provides 3.10
dependencies = [
    "temporalio==1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
