[project]
name = "harness"
version = "0.2.0"
requires-python = ">=3.10"  # 3.12 target per CLAUDE.md; CI host provides 3.10
dependencies = [
    "temporalio==1.9.0",
    "asyncpg==0.30.0",  # MIT — green tier; async Postgres driver
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.8",
    "hypothesis>=6.100,<7",  # MPL-2.0 — yellow tier; dev-only, unmodified, not redistributed
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running Temporal + postgres-business stack",
]
