[project]
name = "harness"
version = "0.3.0"
requires-python = ">=3.10"  # 3.12 target per CLAUDE.md; CI host provides 3.10
dependencies = [
    "temporalio==1.9.0",
    "asyncpg==0.30.0",  # MIT — green tier; async Postgres driver
    "litellm>=1.0,<2",  # MIT — LLM router, routes to Ollama; >=1.53 required for ollama_chat/ structured outputs
    "httpx==0.25.2",    # BSD-3-Clause — HTTP client, used by litellm
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.8",
    "hypothesis>=6.100,<7",  # MPL-2.0 — yellow tier; dev-only, unmodified, not redistributed
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running Temporal + postgres-business stack",
    "unit: no external dependencies required",
    "ollama: requires Ollama running at OLLAMA_BASE_URL with required models pulled",
]
